New Form Wizard New files added - [DocumentController.java,DocumentService.java,DocumentId.java,DocumentServiceImpl.java,Document.java,DocumentDao.java] Files modified - [Main.html,cx2_published_dataModel.json,VendorServiceImpl.java,QueryExecutionController.java,NewForm.html,Forms.html,Cx2QueryExecutorServiceImpl.java,FormTypesService.java,NewForm.variables.json,ManageForms.variables.json,GisrecordsServiceImpl.java,servicedef.xml,cx2_query.json,GisrecordsService.java,FormController.java,NewForm.js,cx2-queries.hbm.xml,FormTypesServiceImpl.java,Vendor.java,VendorService.java,States.java,NewForm.css,Forms.js,FormTypesController.java,Main.variables.json,FormTypes.java,VendorController.java,StatesServiceImpl.java,FormService.java,Forms.variables.json,StatesController.java,GisrecordsController.java,Cx2QueryExecutorService.java,StatesService.java,Gisrecords.java,db-connection-settings.json,pages-config.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -15,13 +15,10 @@
     "table" : "Fees",
     "schema" : "cx2"
   }, {
+    "table" : "Document",
+    "schema" : "cx2"
+  }, {
     "table" : "FormCategories",
-    "schema" : "cx2"
-  }, {
-    "table" : "ContractorTypes",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormCategoryMapping",
     "schema" : "cx2"
   }, {
     "table" : "FormHistory",
@@ -36,16 +33,22 @@
     "table" : "FormTypeFields",
     "schema" : "cx2"
   }, {
-    "table" : "GISContacts",
+    "table" : "ContractorTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormCategoryMapping",
+    "schema" : "cx2"
+  }, {
+    "table" : "GIS2Forms",
     "schema" : "cx2"
   }, {
     "table" : "GISRecords",
     "schema" : "cx2"
   }, {
-    "table" : "GlobalSettings",
+    "table" : "GISContacts",
     "schema" : "cx2"
   }, {
-    "table" : "GIS2Forms",
+    "table" : "GlobalSettings",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -54,13 +57,13 @@
     "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
-    "schema" : "cx2"
-  }, {
     "table" : "MasterForms",
     "schema" : "cx2"
   }, {
     "table" : "Municipalities",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterCases",
     "schema" : "cx2"
   }, {
     "table" : "MasterInspections",
@@ -87,28 +90,28 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "UserPasswordResetTokens",
-    "schema" : "cx2"
-  }, {
     "table" : "Users",
     "schema" : "cx2"
   }, {
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
+    "table" : "UserPasswordResetTokens",
+    "schema" : "cx2"
+  }, {
     "table" : "UserSubscriptions",
-    "schema" : "cx2"
-  }, {
-    "table" : "States",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
     "schema" : "cx2"
   }, {
     "table" : "VendorLicenses",
+    "schema" : "cx2"
+  }, {
+    "table" : "States",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
