--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -86,10 +86,6 @@
     "type" : "string"
   } ]
 }, {
-  "name" : "ManageMuncipalityGroups",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -144,11 +140,10 @@
 }, {
   "name" : "NewForm",
   "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "NewFrom",
-  "type" : "PAGE",
-  "params" : [ ]
+  "params" : [ {
+    "name" : "formTypeId",
+    "type" : "integer"
+  } ]
 }, {
   "name" : "ProcessForms",
   "type" : "PAGE",
