Changes for DB issue Files modified - [pages-config.json,DocumentController.java,cx2_published_dataModel.json,cx2-queries.hbm.xml]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -67,6 +67,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -85,6 +93,10 @@
     "name" : "from",
     "type" : "string"
   } ]
+}, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
 }, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
@@ -145,11 +157,23 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "PUDApplication",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
