Find Form-By User UI New files added - [FindForm.js,FindForm.html,FindForm.variables.json,FindForm.css,FindForm] Files modified - [Main.variables.json,pages-config.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -203,6 +203,17 @@
     } ],
     "pageTransitions" : "none"
   },
+  "goToPage_FindForm" : {
+    "_id" : "wm-goToPage_FindForm-wm.NavigationVariable-1486128615190",
+    "name" : "goToPage_FindForm",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "FindForm",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ForgotPassword" : {
     "_id" : "wm-goToPage_ForgotPassword-wm.NavigationVariable-1479880545540",
     "name" : "goToPage_ForgotPassword",
