--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -52,6 +52,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "FindForm",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ForgotPassword",
   "type" : "PAGE",
   "params" : [ ]
