pushing to test Files modified - [pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -90,6 +90,10 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
   "params" : [ ]
@@ -148,6 +152,10 @@
     "name" : "formTypeId",
     "type" : "integer"
   } ]
+}, {
+  "name" : "NewFrom",
+  "type" : "PAGE",
+  "params" : [ ]
 }, {
   "name" : "ProcessForms",
   "type" : "PAGE",
