Deploy for testing Files modified - [pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,14 +71,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "MCNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "MCNewResidentialStructure",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -161,7 +153,7 @@
     "type" : "integer"
   } ]
 }, {
-  "name" : "PUDApplication",
+  "name" : "NewFrom",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -170,14 +162,6 @@
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
