--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -24,13 +24,7 @@
     "table" : "FormHistory",
     "schema" : "cx2"
   }, {
-    "table" : "FormTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "FormStatuses",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormTypeFields",
     "schema" : "cx2"
   }, {
     "table" : "ContractorTypes",
@@ -39,7 +33,13 @@
     "table" : "FormCategoryMapping",
     "schema" : "cx2"
   }, {
-    "table" : "GIS2Forms",
+    "table" : "FormMessages",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormTypeFields",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormTypes",
     "schema" : "cx2"
   }, {
     "table" : "GISRecords",
@@ -51,7 +51,7 @@
     "table" : "GlobalSettings",
     "schema" : "cx2"
   }, {
-    "table" : "MasterForms",
+    "table" : "GIS2Forms",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -63,10 +63,13 @@
     "table" : "MasterCases",
     "schema" : "cx2"
   }, {
-    "table" : "MasterInspections",
+    "table" : "MasterForms",
     "schema" : "cx2"
   }, {
     "table" : "Municipalities",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
     "table" : "MasterProjects",
@@ -84,9 +87,6 @@
     "table" : "Roles",
     "schema" : "cx2"
   }, {
-    "table" : "Users",
-    "schema" : "cx2"
-  }, {
     "table" : "SharedWith",
     "schema" : "cx2"
   }, {
@@ -96,22 +96,25 @@
     "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
-    "table" : "UserSubscriptions",
+    "table" : "Users",
     "schema" : "cx2"
   }, {
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
-    "table" : "VendorApprovals",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorLicenses",
+    "table" : "UserSubscriptions",
     "schema" : "cx2"
   }, {
     "table" : "States",
     "schema" : "cx2"
   }, {
     "table" : "VendorAdmins",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorApprovals",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
