Dashboard Enhancements Files modified - [leftnav.html,cx2-queries.hbm.xml,MunicipalityAdministration.js,MunicipalityAdministration.variables.json,MyCompany.js,app.variables.json,MyMunicipality.js,Main.js,servicedef.xml,MyMunicipality.variables.json,MyCompany.variables.json,cx2_query.json,MunicipalityAdministration.html]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -15,6 +15,19 @@
     } ],
     "operation" : "toast"
   },
+  "CompanyOpenFormsCount" : {
+    "_id" : "wm-CompanyOpenFormsCount-wm.Variable-1486467750119",
+    "name" : "CompanyOpenFormsCount",
+    "owner" : "App",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : ""
+    },
+    "type" : "string",
+    "isList" : false,
+    "saveInPhonegap" : false
+  },
   "CurrentUserDetails" : {
     "_id" : "wm-CurrentUserDetails-wm.ServiceVariable-1478579290060",
     "name" : "CurrentUserDetails",
@@ -64,6 +77,19 @@
     "saveInPhonegap" : false,
     "isDefault" : true,
     "controller" : "File"
+  },
+  "FormDesignsForMuniAdmin" : {
+    "_id" : "wm-FormDesignsForMuniAdmin-wm.Variable-1486467173350",
+    "name" : "FormDesignsForMuniAdmin",
+    "owner" : "App",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : ""
+    },
+    "type" : "string",
+    "isList" : false,
+    "saveInPhonegap" : false
   },
   "goToPage_CompanyForms" : {
     "_id" : "wm-goToPage_CompanyForms-wm.NavigationVariable-1480417618463",
@@ -699,6 +725,19 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
+  "ProcessFormsCountForEmployee" : {
+    "_id" : "wm-ProcessFormsCountForEmployee-wm.Variable-1486466579855",
+    "name" : "ProcessFormsCountForEmployee",
+    "owner" : "App",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : ""
+    },
+    "type" : "string",
+    "isList" : false,
+    "saveInPhonegap" : false
+  },
   "PUDApplication" : {
     "_id" : "wm-goToPage_PUDApplication-wm.NavigationVariable-1481015708845",
     "name" : "PUDApplication",
@@ -807,6 +846,19 @@
     "category" : "wm.Variable",
     "dataSet" : {
       "en" : "English"
+    },
+    "type" : "string",
+    "isList" : false,
+    "saveInPhonegap" : false
+  },
+  "UserOpenFormsCount" : {
+    "_id" : "wm-UserOpenFormsCount-wm.Variable-1486466257530",
+    "name" : "UserOpenFormsCount",
+    "owner" : "App",
+    "category" : "wm.Variable",
+    "dataBinding" : [ ],
+    "dataSet" : {
+      "dataValue" : ""
     },
     "type" : "string",
     "isList" : false,
