Disable Fix Files modified - [pages-config.json,Forms.variables.json,Forms.html]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,6 +71,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -153,7 +161,7 @@
     "type" : "integer"
   } ]
 }, {
-  "name" : "NewFrom",
+  "name" : "PUDApplication",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -162,6 +170,14 @@
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
