MessageTagging Table New files added - [FormMessageTaggingService.java,FormMessageTaggingServiceImpl.java,FormMessageTaggingDao.java,FormMessageTagging.java,FormMessageTaggingController.java] Files modified - [GisrecordsService.java,cx2_published_dataModel.json,FormMessages.java,VendorServiceImpl.java,Vendor.java,VendorService.java,FormMessagesService.java,States.java,FormMessagesController.java,FormMessagesServiceImpl.java,VendorController.java,UsersController.java,StatesServiceImpl.java,UsersService.java,GisrecordsServiceImpl.java,Users.java,servicedef.xml,StatesController.java,GisrecordsController.java,StatesService.java,Gisrecords.java,UsersServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -125,6 +125,9 @@
   }, {
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
+  }, {
+    "table" : "FormMessageTagging",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
