--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -84,10 +84,16 @@
     "table" : "MunicipalityGroups",
     "schema" : "cx2"
   }, {
+    "table" : "Projects",
+    "schema" : "cx2"
+  }, {
     "table" : "Roles",
     "schema" : "cx2"
   }, {
     "table" : "SharedWith",
+    "schema" : "cx2"
+  }, {
+    "table" : "Users",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroupMembers",
@@ -99,16 +105,13 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "Users",
-    "schema" : "cx2"
-  }, {
-    "table" : "Vendor",
-    "schema" : "cx2"
-  }, {
     "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
     "table" : "UserSubscriptions",
+    "schema" : "cx2"
+  }, {
+    "table" : "Vendor",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
@@ -129,7 +132,7 @@
     "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
-    "table" : "Projects",
+    "table" : "ProjectSharedWith",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
