Projects List New files added - [MyProjects.html,MyProjects.variables.json,MyProjects.js,MyProjects.css,MyProjects] Files modified - [pages-config.json,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -454,6 +454,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MyProjects" : {
+    "_id" : "wm-goToPage_MyProjects-wm.NavigationVariable-1486715945008",
+    "name" : "goToPage_MyProjects",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MyProjects",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_NewForm" : {
     "_id" : "wm-goToPage_NewForm-wm.NavigationVariable-1485785723881",
     "name" : "goToPage_NewForm",
