--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -154,6 +154,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MyProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "NewForm",
   "type" : "PAGE",
   "params" : [ {
