Projects-Project List New files added - [ViewProject.js,ViewProject.html,ViewProject.variables.json,ViewProject.css,ViewProject] Files modified - [pages-config.json,Main.html,Cx2QueryExecutorServiceImpl.java,MyProjects.html,cx2-queries.hbm.xml,QueryExecutionController.java,MyProjects.variables.json,servicedef.xml,MyProjects.js,cx2_query.json,Cx2QueryExecutorService.java,app.variables.json] Removed files - [UserProjects.variables.json,UserProjects.js,UserProjects.css,UserProjects.html]

--- a/src/main/webapp/pages/MyProjects/MyProjects.variables.json
+++ b/src/main/webapp/pages/MyProjects/MyProjects.variables.json
@@ -1108,5 +1108,44 @@
     "saveInPhonegap" : false,
     "controller" : "QueryExecution",
     "spinnerContext" : "page"
+  },
+  "UserAndSharedWith" : {
+    "_id" : "wm-UserAndSharedWith-wm.ServiceVariable-1486720621686",
+    "name" : "UserAndSharedWith",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "Active",
+      "value" : true,
+      "type" : "boolean"
+    }, {
+      "target" : "creatorUser",
+      "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
+      "type" : "integer"
+    }, {
+      "target" : "sharedWithUser",
+      "value" : "bind:Variables.CurrentUserDetails.dataSet.id",
+      "type" : "integer"
+    }, {
+      "target" : "municipalityId",
+      "value" : "bind:Widgets.selectStandardUserMunicipality.datavalue.ID | stringToNumber",
+      "type" : "integer"
+    } ],
+    "type" : "cx2ProjectsForUsersAndSharedWithrtnType",
+    "service" : "cx2",
+    "operation" : "executeProjectsForUsersAndSharedWith",
+    "operationId" : "QueryExecutionController_executeProjectsForUsersAndSharedWith",
+    "operationType" : "get",
+    "serviceType" : "DataService",
+    "dataSet" : [ ],
+    "isList" : true,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : true,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "QueryExecution"
   }
 }
