--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -542,17 +542,6 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
-  "goToPage_UserProjects" : {
-    "_id" : "wm-goToPage_UserProjects-wm.NavigationVariable-1484929451082",
-    "name" : "goToPage_UserProjects",
-    "owner" : "App",
-    "category" : "wm.NavigationVariable",
-    "dataBinding" : [ ],
-    "operation" : "gotoPage",
-    "pageName" : "UserProjects",
-    "dataSet" : [ ],
-    "pageTransitions" : "none"
-  },
   "goToPage_VendorApplication" : {
     "_id" : "wm-goToPage_VendorApplication-wm.NavigationVariable-1480415119127",
     "name" : "goToPage_VendorApplication",
@@ -561,6 +550,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "VendorApplication",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_ViewProject" : {
+    "_id" : "wm-goToPage_ViewProject-wm.NavigationVariable-1486718548788",
+    "name" : "goToPage_ViewProject",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ViewProject",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
