--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/FormMessagingMailService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/FormService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -145,6 +152,7 @@
                             
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/FileService/src</source>
+                                <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
                                 <source>services/FormStatusUpdate/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
