--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -134,6 +134,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "ProjectGISRecords",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
