--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -87,6 +87,9 @@
     "table" : "Projects",
     "schema" : "cx2"
   }, {
+    "table" : "ProjectGISRecords",
+    "schema" : "cx2"
+  }, {
     "table" : "ProjectSharedWith",
     "schema" : "cx2"
   }, {
@@ -105,22 +108,22 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
-    "table" : "UserPasswordResetTokens",
-    "schema" : "cx2"
-  }, {
     "table" : "Users",
     "schema" : "cx2"
   }, {
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
+    "table" : "UserPasswordResetTokens",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserSubscriptions",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorApprovals",
     "schema" : "cx2"
   }, {
     "table" : "VendorLicenses",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserSubscriptions",
     "schema" : "cx2"
   }, {
     "table" : "VendorAdmins",
@@ -135,7 +138,7 @@
     "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
-    "table" : "ProjectGISRecords",
+    "table" : "ProjectForms",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
