--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -4,15 +4,15 @@ db.cx2.jndiName=
 db.cx2.maxPageSize=100
 db.cx2.password=7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158
 db.cx2.schemaName=CX2
-db.cx2.url=jdbc:sqlserver://192.168.2.211:1433;databaseName=CX2_DEV
+db.cx2.url=jdbc:sqlserver://64.87.23.26:1433;databaseName=CX2_DEV
 db.cx2.username=CX2
 db.fishers.dataSourceType=WM_MANAGED_DATASOURCE
 db.fishers.hbm2ddl=none
 db.fishers.jndiName=
 db.fishers.maxPageSize=100
 db.fishers.password=7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158
-db.fishers.schemaName=CX_FISHERS
-db.fishers.url=jdbc:sqlserver://192.168.2.211:1433;databaseName=CX2_FISHERS
+db.fishers.schemaName=fishers
+db.fishers.url=jdbc:sqlserver://64.87.23.26:1433;databaseName=CX2_FISHERS
 db.fishers.username=CX2
 security.enabled=true
 security.general.rememberMe.enabled=true
