--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,14 +71,6 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "MCNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "MCNewResidentialStructure",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -97,10 +89,6 @@
     "name" : "from",
     "type" : "string"
   } ]
-}, {
-  "name" : "ManageMuncipalityGroups",
-  "type" : "PAGE",
-  "params" : [ ]
 }, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
@@ -165,23 +153,11 @@
     "type" : "integer"
   } ]
 }, {
-  "name" : "PUDApplication",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewElectricConnection",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -198,6 +174,10 @@
   "params" : [ ]
 }, {
   "name" : "UserOpenForms",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "UserProjects",
   "type" : "PAGE",
   "params" : [ ]
 }, {
