Maybe fishers caused a problem Files modified - [deployment.properties,pages-config.json]

--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -10,10 +10,10 @@ db.fishers.dataSourceType=WM_MANAGED_DATASOURCE
 db.fishers.hbm2ddl=none
 db.fishers.jndiName=
 db.fishers.maxPageSize=100
-db.fishers.password=7b6a43524a036c036262605a16122d0e157d6936254a5678700d662158
+db.fishers.password=7b6a43524a13241f6578367d11046c70477c612a43
 db.fishers.schemaName=fishers
 db.fishers.url=jdbc:sqlserver://64.87.23.26:1433;databaseName=fishers
-db.fishers.username=cx2
+db.fishers.username=fishers
 security.enabled=true
 security.general.rememberMe.enabled=true
 security.general.rememberMe.timeOut=1296000
