cleaned up my projects page and create project dialog Files modified - [MyProjects.html,MyProjects.variables.json]

--- a/src/main/webapp/pages/MyProjects/MyProjects.variables.json
+++ b/src/main/webapp/pages/MyProjects/MyProjects.variables.json
@@ -985,16 +985,15 @@
         "scale" : 0
       }, {
         "fieldName" : "projectDescription",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
+        "type" : "text",
+        "fullyQualifiedType" : "text",
         "columnName" : "ProjectDescription",
         "isPrimaryKey" : false,
         "notNull" : false,
-        "length" : 1000,
+        "length" : 2147483647,
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
-        "defaultValue" : "",
         "scale" : 0
       }, {
         "fieldName" : "projectGoals",
