ProjectForms-(Project&Form Combination is made unique) Files modified - [pages-config.json,ProjectFormsController.java,MasterFormsController.java,cx2_published_dataModel.json,UsersController.java,ProjectsController.java,ProjectSharedWith.java,ProjectFormsServiceImpl.java,ProjectFormsService.java,Projects.java,ProjectForms.java,db-connection-settings.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -71,6 +71,14 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MCNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "MCNewResidentialStructure",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Main",
   "type" : "PAGE",
   "params" : [ ]
@@ -89,6 +97,10 @@
     "name" : "from",
     "type" : "string"
   } ]
+}, {
+  "name" : "ManageMuncipalityGroups",
+  "type" : "PAGE",
+  "params" : [ ]
 }, {
   "name" : "ManageMunicipalities",
   "type" : "PAGE",
@@ -153,11 +165,23 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "PUDApplication",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ProcessForms",
   "type" : "PAGE",
   "params" : [ ]
 }, {
   "name" : "ResetPassword",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewElectricConnection",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "SFNewResidentialStructure",
   "type" : "PAGE",
   "params" : [ ]
 }, {
@@ -174,10 +198,6 @@
   "params" : [ ]
 }, {
   "name" : "UserOpenForms",
-  "type" : "PAGE",
-  "params" : [ ]
-}, {
-  "name" : "UserProjects",
   "type" : "PAGE",
   "params" : [ ]
 }, {
