Modified "Select Municipality" and "Select Company" fields so that they are only displayed for multiple municipalities/companies. Made stylistic tweaks to create uniformity across pages (especially mobile). Files modified - [ManageForms.html,Main.html,CompanyForms.html,ManageGISData.variables.json,ManualFeeTypes.html,MyMunicipality.html,MunicipalityUsers.variables.json,CompanyProfile.html,MyCompany.html,ManageGISData.html,ManualFeeTypes.variables.json,ManageSubscriptions.variables.json,ProcessForms.html,CompanyMunicipalities.variables.json,ManageMunicipalityVendors.variables.json,CXGlobalSettings.html,ViewProject.variables.json,CompanyProfile.variables.json,WorkSchedule.html,ManageMunicipalityVendors.html,MunicipalitySettings.html,MunicipalitySettings.variables.json,MunicipalityUsers.html,EditForm.html,CompanyMunicipalities.html,ManageUsers.variables.json,MunicipalityAdministration.html,CompanyUsers.variables.json,CompanyUsers.html]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.variables.json
@@ -387,7 +387,7 @@
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
-        "defaultValue" : "",
+        "defaultValue" : "TRUE",
         "scale" : 0
       }, {
         "fieldName" : "globalEmailSig",
@@ -582,6 +582,32 @@
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "userLimit",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "UserLimit",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "10",
+        "scale" : 0
+      }, {
+        "fieldName" : "formLimit",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "FormLimit",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "5",
         "scale" : 0
       } ],
       "entityName" : "Municipalities",
@@ -861,7 +887,7 @@
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
-        "defaultValue" : "",
+        "defaultValue" : "TRUE",
         "scale" : 0
       }, {
         "fieldName" : "globalEmailSig",
@@ -1056,6 +1082,32 @@
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
+        "scale" : 0
+      }, {
+        "fieldName" : "userLimit",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "UserLimit",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "10",
+        "scale" : 0
+      }, {
+        "fieldName" : "formLimit",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "FormLimit",
+        "isPrimaryKey" : false,
+        "notNull" : true,
+        "length" : 0,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : false,
+        "defaultValue" : "5",
         "scale" : 0
       } ],
       "entityName" : "Municipalities",
