--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -850,7 +850,8 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
-          "defaultValue" : "",
+          "systemInserted" : true,
+          "systemUpdated" : true,
           "scale" : 0
         } ]
       }, {
@@ -1091,7 +1092,8 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
-          "defaultValue" : "",
+          "systemInserted" : true,
+          "systemUpdated" : true,
           "scale" : 0
         } ]
       }, {
@@ -1546,7 +1548,8 @@
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
-        "defaultValue" : "",
+        "systemInserted" : true,
+        "systemUpdated" : true,
         "scale" : 0
       } ],
       "entityName" : "Users",
@@ -2356,6 +2359,8 @@
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
+        "systemInserted" : true,
+        "systemUpdated" : true,
         "scale" : 0
       } ],
       "entityName" : "Gisrecords",
@@ -3176,6 +3181,8 @@
         "precision" : 0,
         "generator" : "assigned",
         "isRelated" : false,
+        "systemInserted" : true,
+        "systemUpdated" : true,
         "scale" : 0
       } ],
       "entityName" : "Gisrecords",
@@ -3313,6 +3320,186 @@
     "matchMode" : "start",
     "propertiesMap" : {
       "columns" : [ {
+        "fieldName" : "projects",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
+        "columnName" : "RelatedProjectGUID",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 32,
+        "precision" : 0,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "relatedTableName" : "Projects",
+        "relatedEntityName" : "Projects",
+        "relatedColumnName" : "relatedProjectGuid",
+        "relatedFieldName" : "projects.projectGuid",
+        "isList" : false,
+        "targetTable" : "Projects",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "municipalities",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "MunicipalityId",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "municipalityId",
+          "targetTable" : "Municipalities",
+          "scale" : 0
+        }, {
+          "fieldName" : "usersByCreatedBy",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "CreatedBy",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "createdBy",
+          "targetTable" : "Users",
+          "scale" : 0
+        }, {
+          "fieldName" : "usersByModifiedBy",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ModifiedBy",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "relatedColumnName" : "modifiedBy",
+          "targetTable" : "Users",
+          "scale" : 0
+        }, {
+          "fieldName" : "projectGuid",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "ProjectGUID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 32,
+          "precision" : 0,
+          "generator" : "uniqueid",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "projectName",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "ProjectName",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "projectDescription",
+          "type" : "text",
+          "fullyQualifiedType" : "text",
+          "columnName" : "ProjectDescription",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 2147483647,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "scale" : 0
+        }, {
+          "fieldName" : "projectGoals",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "ProjectGoals",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 1000,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "estStartDate",
+          "type" : "timestamp",
+          "fullyQualifiedType" : "timestamp",
+          "columnName" : "EstStartDate",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "estEndDate",
+          "type" : "timestamp",
+          "fullyQualifiedType" : "timestamp",
+          "columnName" : "EstEndDate",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "createdDate",
+          "type" : "timestamp",
+          "fullyQualifiedType" : "timestamp",
+          "columnName" : "CreatedDate",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "modifiedDate",
+          "type" : "timestamp",
+          "fullyQualifiedType" : "timestamp",
+          "columnName" : "ModifiedDate",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "active",
+          "type" : "boolean",
+          "fullyQualifiedType" : "boolean",
+          "columnName" : "Active",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 0,
+          "precision" : 0,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        } ]
+      }, {
         "fieldName" : "gisrecords",
         "type" : "integer",
         "fullyQualifiedType" : "integer",
@@ -3594,6 +3781,8 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
+          "systemInserted" : true,
+          "systemUpdated" : true,
           "scale" : 0
         } ]
       }, {
@@ -3834,7 +4023,8 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
-          "defaultValue" : "",
+          "systemInserted" : true,
+          "systemUpdated" : true,
           "scale" : 0
         } ]
       }, {
@@ -3847,19 +4037,6 @@
         "length" : 0,
         "precision" : 10,
         "generator" : "identity",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "relatedProjectGuid",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "RelatedProjectGUID",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 0,
-        "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
         "scale" : 0
@@ -3885,8 +4062,14 @@
     "spinnerContext" : "tabpaneMAPS",
     "tableName" : "ProjectGISRecords",
     "tableType" : "TABLE",
-    "properties" : [ "gisrecords", "users" ],
+    "properties" : [ "projects", "gisrecords", "users" ],
     "relatedTables" : [ {
+      "columnName" : "projects",
+      "relationName" : "projects",
+      "type" : "Projects",
+      "watchOn" : "Cx2ProjectsData",
+      "package" : "com.civicxpress.cx2.ProjectGisrecords"
+    }, {
       "columnName" : "gisrecords",
       "relationName" : "gisrecords",
       "type" : "Gisrecords",
@@ -4161,7 +4344,8 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
-          "defaultValue" : "",
+          "systemInserted" : true,
+          "systemUpdated" : true,
           "scale" : 0
         } ]
       }, {
@@ -4583,7 +4767,8 @@
           "precision" : 0,
           "generator" : "assigned",
           "isRelated" : false,
-          "defaultValue" : "",
+          "systemInserted" : true,
+          "systemUpdated" : true,
           "scale" : 0
         } ]
       }, {
