Project SharedWith Changes ProjectDevDataEntry New files added - [ProjectsDevDataEntry.variables.json,ProjectsDevDataEntry.html,ProjectsDevDataEntry.js,ProjectsDevDataEntry.css,ProjectsDevDataEntry] Files modified - [leftnav.html,pages-config.json,ViewProject.js,Forms.variables.json,FindForm.variables.json,DevFormDataEntry.variables.json,ViewProject.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -487,6 +487,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ProjectsDevDataEntry" : {
+    "_id" : "wm-goToPage_ProjectsDevDataEntry-wm.NavigationVariable-1487157016005",
+    "name" : "goToPage_ProjectsDevDataEntry",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ProjectsDevDataEntry",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_ResetPassword" : {
     "_id" : "wm-goToPage_ResetPassword-wm.NavigationVariable-1479884962543",
     "name" : "goToPage_ResetPassword",
