--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -173,6 +173,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ProjectsDevDataEntry",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "ResetPassword",
   "type" : "PAGE",
   "params" : [ ]
