--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -181,6 +181,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "UserProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "VendorApplication",
   "type" : "PAGE",
   "params" : [ ]
