- Fixed issue with extra spaces in form names (Bug #1109) Files modified - [DBUtils.jar,ManageForms.variables.json,testdeploy.properties,FormService.java,pom.xml]

--- a/profiles/testdeploy.properties
+++ b/profiles/testdeploy.properties
@@ -18,7 +18,7 @@ security.enabled=true
 security.general.rememberMe.enabled=true
 security.general.rememberMe.timeOut=1296000
 security.general.session.timeout=45
-security.general.ssl.enabled=true
+security.general.ssl.enabled=false
 security.general.ssl.port=443
 security.general.xsrf.enabled=false
 security.general.xss.enabled=false
