Projects- duplicate Parcels added to list Files modified - [cx2_published_dataModel.json,ProjectGisrecordsService.java,ProjectGisrecordsController.java,ProjectGisrecords.java,ProjectGisrecordsServiceImpl.java,ViewProject.variables.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -1256,7 +1256,7 @@
       "type" : "string"
     }, {
       "target" : "text",
-      "value" : "DuplicateGISRecordToProject",
+      "value" : "That Parcel has already been added to the form.",
       "type" : "string"
     }, {
       "target" : "duration",
