Created Tables-StandardViews and UserViewPreferences Note: UserViewPreferences is bridge table for Users and StandardViews New files added - [StandardViews.java,UserViewPreferencesDao.java,UserViewPreferencesService.java,StandardViewsDao.java,UserViewPreferences.java,UserViewPreferencesServiceImpl.java,StandardViewsServiceImpl.java,StandardViewsService.java,StandardViewsController.java,UserViewPreferencesController.java] Files modified - [pages-config.json,cx2_published_dataModel.json,MunicipalitiesController.java,UsersController.java,FormTypeFields.java,Users.java,UsersService.java,servicedef.xml,Municipalities.java,MunicipalitiesService.java,MunicipalitiesServiceImpl.java,UsersServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -143,6 +143,12 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "StandardViews",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserViewPreferences",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
